Adicionando elementos h1, div.

--- a/lista-ol.html
+++ b/lista-ol.html
@@ -6,6 +6,12 @@
     <title>Listas OL</title>
 </head>
 <body>
-    
+    <div>
+        <h1>Lista ordenada sem atributo</h1>
+        <!--DIV = É um elemento que é um container, é de bloco e comporta praticamente todos os elementos dentro dele. É usado como referência  em tudo, ou seja, ele se passa por outros elementos-->
+        <div>
+
+    </div>
+</div>
 </body>
 </html>
