--- a/lista-ol.html
+++ b/lista-ol.html
@@ -8,7 +8,16 @@
 <body>,
      <div>
         <h1>Lista ordenada sem atributos</h1>
-        
+        <div>
+            <ol>
+                <li>Pão de queijo</li>
+                <li>Feijoada</li>
+                <li>Pastel de feira</li>
+                <li>Burgão do jorjão</li>
+            </ol>
+
+        </div>
+
     </div>
 
 </body>
