Adicionada a lista <ol>.

--- a/lista-ol.html
+++ b/lista-ol.html
@@ -10,8 +10,14 @@
         <h1>Lista ordenada sem atributo</h1>
         <!--DIV = É um elemento que é um container, é de bloco e comporta praticamente todos os elementos dentro dele. É usado como referência  em tudo, ou seja, ele se passa por outros elementos-->
         <div>
-
-    </div>
+            <ol>
+                <li>GM</li>
+                <li>FIAT</li>
+                <li>JAC</li>
+                <li>VOLKSWAGEM</li>
+                <li>PEUGEOUT</li>
+            </ol>
+        </div>
 </div>
 </body>
 </html>
