Nome da montadora corrigido de PEUGEOUT para PEUGEOT.

--- a/lista-ol.html
+++ b/lista-ol.html
@@ -15,7 +15,7 @@
                 <li>FIAT</li>
                 <li>JAC</li>
                 <li>VOLKSWAGEM</li>
-                <li>PEUGEOUT</li>
+                <li>PEUGEOT</li>
             </ol>
         </div>
 </div>
