Utilizacao do atributo start

--- a/lista-ol.html
+++ b/lista-ol.html
@@ -18,6 +18,18 @@
                 <li>PEUGEOT</li>
             </ol>
         </div>
+
+        <h2>Lista ordenada com atributo [START] </h2>
+        <div>
+            <ol start="10">
+                <li>GM</li>
+                <li>FIAT</li>
+                <li>JAC</li>
+                <li>VOLKSWAGEM</li>
+                <li>PEUGEOT</li>
+            </ol>
+        </div>
+
 </div>
 </body>
 </html>
