utilizando atributo reversed

--- a/lista-ol.html
+++ b/lista-ol.html
@@ -30,6 +30,18 @@
             </ol>
         </div>
 
+        <h2>Lista ordenada com atributo [START] e [REVERSED] </h2>
+        <div>
+            <ol start="10" reversed>
+                <li>GM</li>
+                <li>FIAT</li>
+                <li>JAC</li>
+                <li>VOLKSWAGEM</li>
+                <li>PEUGEOT</li>
+            </ol>
+        </div>
+
+
 </div>
 </body>
 </html>
