--- a/lista-ol.html
+++ b/lista-ol.html
@@ -41,6 +41,18 @@
             </ol>
         </div>
 
+        <h3>Lista ordenada com atributo [START] e [REVERSED] e alterando o tipo do numerador. que pode ser[ A,a,I,i,1 ] </h3>
+        <div>
+            <ol start="10" reversed>
+                <li>GM</li>
+                <li>FIAT</li>
+                <li>JAC</li>
+                <li>VOLKSWAGEM</li>
+                <li>PEUGEOT</li>
+            </ol>
+        </div>
+
+
 
 </div>
 </body>
