add type + start

--- a/lista-ol.html
+++ b/lista-ol.html
@@ -43,9 +43,9 @@
                 </div>
 
                 <div>
-                    <h3>Lista ordenada sem atributos [START e REVERSED e alterando tipo de numerador ]</h3>
+                    <h3>Lista ordenada sem atributos [START e TYPE]</h3>
                     <div>
-                        <ol start="50" reversed>
+                        <ol start="A" type="A" reversed>
                             <li>Pão de queijo</li>
                             <li>Feijoada</li>
                             <li>Pastel de feira</li>
