Finalizando as ol.

--- a/lista-ol.html
+++ b/lista-ol.html
@@ -41,9 +41,9 @@
             </ol>
         </div>
 
-        <h3>Lista ordenada com atributo [START] e [REVERSED] e alterando o tipo do numerador. que pode ser[ A,a,I,i,1 ] </h3>
+        <h3>Lista ordenada com atributo [START] [REVERSED] e alterando o tipo do numerador. que pode ser[ A,a,I,i,1 ] </h3>
         <div>
-            <ol start="10" reversed>
+            <ol start="i" type="i">
                 <li>GM</li>
                 <li>FIAT</li>
                 <li>JAC</li>
@@ -51,8 +51,6 @@
                 <li>PEUGEOT</li>
             </ol>
         </div>
-
-
 
 </div>
 </body>
