--- a/lista-ol.html
+++ b/lista-ol.html
@@ -45,7 +45,7 @@
                 <div>
                     <h3>Lista ordenada sem atributos [START e TYPE]</h3>
                     <div>
-                        <ol start="A" type="A" reversed>
+                        <ol start="5" type="A" reversed>
                             <li>Pão de queijo</li>
                             <li>Feijoada</li>
                             <li>Pastel de feira</li>
