add in ul some li's

--- a/lista-ul.html
+++ b/lista-ul.html
@@ -7,9 +7,16 @@
 </head>
 <body>
     <div>
-    <h1>Lista sem ordenação</h1>]
+    <h1>Lista sem ordenação</h1>
         <div>
-            
+            <ul>
+                <li>Brasil</li>
+                <li>Italia</li>
+                <li>China</li>
+                <li>Canada</li>
+                <li>França</li>
+                <li>Alemanha</li>
+            </ul>
         </div>
 
     </div>
