--- a/lista-ul.html
+++ b/lista-ul.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,12 @@
         <h1>Listas sem ORDENAÇÃO</h1>
         <div>
             <ul>
-                <li></li>
+                <li>Jéssica</li>
+                <li>Antonio</li>
+                <li>Lorenzo</li>
+                <li>Maria</li>
+                <li>João</li>
+                <li>Petersen</li>
             </ul>
         </div>
     </div>
