add lista sem ordenacao com sub lista

--- a/lista-ul.html
+++ b/lista-ul.html
@@ -18,7 +18,39 @@
                 <li>Alemanha</li>
             </ul>
         </div>
+         
+        <div>
+            <h1>Lista sem ordenação</h1>
+        <div>
+            <ul>
+                <li>Brasil
+                    <ul>
+                        <li>São Paulo</li>
+                        <li>Rio de janeiro</li>
+                    </ul>
+                </li>
 
+                <li>Italia</li>
+                <li>China
+                    <ul>
+                        <li>Beijing</li>
+                        <li>Sichuan</li>
+                        <li>Hangzhou</li>
+                    </ul>
+                </li>
+                <li>Canada
+                    <ol>
+                        <li>Quebec</li>
+                        <li>Ontario</li>
+                        <li>British Columbia</li>
+                    </ol>
+                </li>
+                <li>França</li>
+                <li>Alemanha</li>
+            </ul>
+        </div>
+
+        </div>
     </div>
 </body>
 
