Listas sem ordenacao com subitens.

--- a/lista-ul.html
+++ b/lista-ul.html
@@ -19,6 +19,37 @@
                 <li>Petersen</li>
             </ul>
         </div>
+
+        <h2>Listas sem ORDENAÇÃO com Sub Itens</h2>
+        <div>
+            <ul>
+                <li>Jéssica
+                    <ul>
+                        <li>Júlia</li>
+                        <li>Luciano</li>
+                    </ul>
+                </li>
+                <li>Antonio</li>
+                <li>Lorenzo
+                    <ul>
+                        <li>Luigi</li>
+                    </ul>
+                </li>
+                <li>Maria
+                    <ul>
+                        <li>João</li>
+                        <li>Junior</li>
+                        <li>André</li>
+                    </ul>
+                </li>
+                <li>João</li>
+                <li>Petersen
+                    <li>Dagoberto</li>
+                    <li>Theo</li>
+                </li>
+            </ul>
+        </div>
+    
     </div>
 
 </body>
