add ul in alemanha

--- a/lista-ul.html
+++ b/lista-ul.html
@@ -39,14 +39,18 @@
                     </ul>
                 </li>
                 <li>Canada
-                    <ol>
+                    <ul>
                         <li>Quebec</li>
                         <li>Ontario</li>
                         <li>British Columbia</li>
-                    </ol>
+                    </ul>
                 </li>
                 <li>França</li>
-                <li>Alemanha</li>
+                <li>Alemanha
+                    <ul>
+                        <li>Comida ruim</li>
+                    </ul>
+                </li>
             </ul>
         </div>
 
