add no h1 "sub linhas "

--- a/lista-ul.html
+++ b/lista-ul.html
@@ -20,7 +20,7 @@
         </div>
          
         <div>
-            <h1>Lista sem ordenação</h1>
+            <h1>Lista sem ordenação com sub linhas</h1>
         <div>
             <ul>
                 <li>Brasil
