Correçao dos subitens.

--- a/lista-ul.html
+++ b/lista-ul.html
@@ -38,14 +38,24 @@
                 <li>Maria
                     <ul>
                         <li>João</li>
-                        <li>Junior</li>
+                        <li>Junior
+                            <ul>
+                                <li>Núbia</li>
+                            </ul>
+                        </li>
                         <li>André</li>
                     </ul>
                 </li>
                 <li>João</li>
                 <li>Petersen
-                    <li>Dagoberto</li>
-                    <li>Theo</li>
+                    <ul>
+                        <li>Dagoberto
+                            <ul>
+                                <li>Marcelo</li>
+                            </ul>
+                        </li>
+                        <li>Theo</li>
+                    </ul>
                 </li>
             </ul>
         </div>
