--- a/link.html
+++ b/link.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LINKS</title>
 </head>
 <body>
     <div>
-        
+        <h1>Criando um link relativo simples para um endereço externo</h1>
+
+        <a href="http://www.fiap.com.br">FIAP</a>
+
     </div>
 </body>
 </html>
