Adicionando um link absoluto [INCORRETO]

--- a/link.html
+++ b/link.html
@@ -12,5 +12,20 @@
         <a href="http://www.fiap.com.br">FIAP</a>
 
     </div>
+    <div>
+        <h2>Criando um link relativo ao escopo interno.</h2>
+
+        <a href="README.md">README</a><br>
+        <a href="lista-ol.html">lista-ol</a><br>
+        <a href="lista-ul.html">lista-ul</a><br>
+
+    </div>
+    <div>
+        <h3>Criando um link absoluto, o que é incorreto.</h2>
+
+        <a href="D:/Drive/Fiap/2021/RWD/1SEM/1TDSF/Aula06-19032021/exemplo-listas/lista-ol.html">lista-ol</a><br>
+
+    </div>
+
 </body>
 </html>
