Criado link relativo a pasta interna e acessando pasta filha.

--- a/link.html
+++ b/link.html
@@ -7,6 +7,18 @@
 </head>
 <body>
     <div>
+
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="lista-ol.html">Lista ordenada</a></li>
+                    <li><a href="lista-ul.html">Lista não-ordenada</a></li>
+                    <li><a href="./paginas/pagina1.html">Página-1</a></li>
+                </ul>
+            </nav>
+        </header>
+
+
         <h1>Criando um link relativo simples para um endereço externo</h1>
 
         <a href="http://www.fiap.com.br">FIAP</a>
