Criação de links relativos partindo das pastas filhas utilizando ../

--- a/paginas/pagina1.html
+++ b/paginas/pagina1.html
@@ -7,6 +7,21 @@
 </head>
 <body>
     
+    <div>
+
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="../lista-ol.html">Lista ordenada</a></li>
+                    <li><a href="../lista-ul.html">Lista não-ordenada</a></li>
+                    <li><a href="../link.html">Links</a></li>
+                </ul>
+            </nav>
+        </header>
+
+    </div>
+
+
     <div id="Content" wfd-id="5">
         <div id="bannerL" wfd-id="26"><div id="div-gpt-ad-1474537762122-2" wfd-id="27">
         <script type="text/javascript">googletag.cmd.push(function() { googletag.display("div-gpt-ad-1474537762122-2"); });</script>
